# ceammc-pdobject-class-wrapper

./: .gitignore  .gitignore.swp  CMakeLists.txt  README.md
ceammc-pd-0.6/data/: datatype_dict.cpp  datatype_dict.h  datatype_mlist.h  datatype_set.h  dict_parser_impl.h  global_base.h  local_base.h
ceammc-pd-0.6/lib/: CMakeLists.txt  ceammc.c  ceammc.h  ceammc_array.cpp  ceammc_array.h  ceammc_atom.h  ceammc_atomlist.cpp  ceammc_atomlist.h  ceammc_canvas.h  ceammc_control.h  ceammc_convert.h  ceammc_convert_pitch.cpp  ceammc_data.cpp  ceammc_dataatom.h  ceammc_datastorage.cpp  ceammc_datastorage.h  ceammc_datatypes.h  ceammc_factory.h  ceammc_fn_list.cpp  ceammc_fn_list.h  ceammc_loader_coreaudio_impl.h  ceammc_music_temperament.h  ceammc_music_theory_names.cpp  ceammc_music_theory_pitch_class.h  ceammc_object.h  ceammc_platform.cpp  ceammc_platform_unix.cpp  ceammc_platform_win.h  ceammc_preset.cpp  ceammc_property.cpp  ceammc_property.h  ceammc_sound.h
ceammc-pd-0.6/lib/utf8rewind/: utf8rewind.c
ceammc-pd-0.6/string/: datatype_string.h
ceammc_lib_0.6/: ceammc.cpp  ceammc.hpp  ceammc_canvas.cpp  ceammc_clock.h  ceammc_control.cpp  ceammc_convert.cpp  ceammc_data.h  ceammc_dataatom.cpp  ceammc_dataatomlist.cpp  ceammc_dataatomlist.h  ceammc_faust.h  ceammc_format.cpp  ceammc_format.h  ceammc_gui.h  ceammc_loader_coreaudio_impl.m  ceammc_message.cpp  ceammc_message.h  ceammc_music_temperament.cpp  ceammc_music_theory.cpp  ceammc_music_theory.h  ceammc_music_theory_alteration.cpp  ceammc_music_theory_alteration.h  ceammc_music_theory_keyboard.h  ceammc_music_theory_names.h  ceammc_music_theory_pitch_class.cpp  ceammc_music_theory_pitch_name.cpp  ceammc_music_theory_pitch_name.h  ceammc_object.cpp  ceammc_pd.cpp  ceammc_pd.h  ceammc_platform.h  ceammc_platform_unix.h  ceammc_platform_win.cpp  ceammc_preset.h  ceammc_proxy.h  ceammc_signal.h  ceammc_sound_external.cpp  ceammc_sound_external.h  ceammc_thread.cpp  ceammc_thread.h  (+1 more)
scripts/: .nestedparent.nestedparent.nestedstruct.method.pddoc  .nestedparent.nestedparent.nestedstruct.new.pddoc  common_functions.py  convert_headers.py  converter_object_templates.py  create_pddoc.py  init_library.sh  post_build_script.sh  run_scripts.sh  write_pddoc.py
src/: ClassConstructor.hpp  ClassConstructor.hpp.autosave  ClassMethod.hpp  ClassMethod.hpp.autosave  ClassStaticMethod.hpp  ClassWrapper.hpp  DataStorage.hpp  Macros.hpp  StructField.hpp  TypeConstructor.hpp  TypeMethod.hpp  Wrapper.hpp  WrapperDemo.cpp  _AbstractDataWrapT.hpp  _AtomListWrapperT.hpp  _ConvertFromCEAMMCType.cpp  _ConvertFromPdType.cpp  _ConvertToCEAMMCType.cpp  _ConvertToPdType.cpp  _Converters.hpp  _Invocations.hpp  _SequenceT.hpp  _functionTraits.hpp
submodule/: CMakeLists.txt  init_library.sh  library_info.cfg
tests/: CMakeLists.txt  test_abstract_data_wrap.cpp  test_atomlist_wrapper.cpp  test_atomlist_wrapper.cpp.autosave
to_build/: DemoClass.cpp  DemoClass.hpp
to_wrap/: DemoClass.cpp  DemoClass.hpp  _generated.cpp
